--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,5 +8,5 @@ jobs:
     name: Check the contents of the file
     runs-on: ubuntu-latest
     steps:
-      - users: actions/checkout@v1
+      - uses: actions/checkout@v1
       - run: cat sample.txt
