--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,4 +9,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - run: echo "Hello World."
       - run: cat sample.txt
